@@ -35,9 +35,18 @@
 <div class="document">
 
 
+<p>2015-04-14  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/png.c (ReadOneJNGImage): Fix Coverity 55829 and 55846
+&quot;Resource leak&quot;.</li>
+</ul>
+</blockquote>
 <p>2015-04-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
+55831 &quot;Resource leak&quot;.  2nd try.</li>
 <li>coders/vid.c (ReadVIDImage): Fix Coverity 55868 and 55874
 &quot;Resource leak&quot;.  2nd try.</li>
 </ul>
